--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
 name: ci
 
 on:
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0 0 * * *'
+  # * remove auto: https://github.com/bguyl/docker-superpowers-core/issues/1
+  #schedule:
+  # 
+  #  - cron:  '0 0 * * *'
   push:
     branches:
       - 'master'
